--- a/lab2/lab021 copy.ipynb
+++ b/lab2/lab021 copy.ipynb
@@ -169,11 +169,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "#y_train = to_categorical(y_train, num_classes=3)\n",
+        "#y_train = to_categorical(y_train, num_classes=3)#Convierte un array de etiquetas enteras en una matriz hot-encoder para que sea compatible con el categorical_crossentropy\n",
         "#y_valid = to_categorical(y_valid, num_classes=3)"
       ]
     },
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -209,13 +209,13 @@
         }
       ],
       "source": [
-        "model = Sequential([\n",
-        "    Embedding(input_dim=5000, output_dim=128, input_length=max_length),\n",
-        "    SpatialDropout1D(0.2),\n",
-        "    LSTM(256, return_sequences=True, dropout=0.2),  # LSTM aditional layer\n",
-        "    LSTM(128, dropout=0.2),\n",
+        "model = Sequential([#Apilar capas de manera lineal\n",
+        "    Embedding(input_dim=5000, output_dim=128, input_length=max_length),#Convierte los índices en vectores de tamaño fijo, vector de 128 dimensions, logitud max de entrada son 50 tokens\n",
+        "    SpatialDropout1D(0.2),#0.1 #evitar sobreajuste, con una tasa del 10%\n",
+        "    LSTM(256, return_sequences=True, dropout=0.2),  # LSTM aditional layer #0.1 tasa para evitar sobreajuste 200 neuronas, capa red neuronal recurrente. el true se pone para que pase todas las salidas completas en ves de la última, esto se hace cuando hay otra capa a mayores\n",
+        "    LSTM(128, dropout=0.2),#0.1 100 lo mismo que lo de arriba\n",
         "    Dense(64, activation='relu'),\n",
-        "    Dense(3, activation='softmax')\n",
+        "    Dense(3, activation='softmax')# 3 numero de nueronas para nuestro porblema de clasificación, softmax funcion de activación que funciona por probabilidades\n",
         "])"
       ]
     },
@@ -228,11 +228,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "#model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+        "#model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "# #funcion de pérdida para el cálculo del error es esta por el one-hot encoding, Adam es un algoritmo de optimización para ajustar los pesos , es eficiente y requiere de poco ajuste de los hiperparámetros"
       ]
     },
     {
@@ -253,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -284,7 +285,7 @@
         }
       ],
       "source": [
-        "#history = model.fit(X_train, y_train, epochs=10, batch_size=64, validation_data=(X_valid, y_valid))\n",
+        "#history = model.fit(X_train, y_train, epochs=10, batch_size=64, validation_data=(X_valid, y_valid))# batch_size= 64 muestras procesadas antes de actualizar los pesos\n",
         "history = model.fit(X_train, y_train, epochs=10, validation_data=(X_valid, y_valid), verbose=2)"
       ]
     },
@@ -336,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -372,6 +373,7 @@
       "source": [
         "y_pred = model.predict(X_valid)\n",
         "y_pred_classes = np.argmax(y_pred, axis=1)\n",
+        "#y_true_classes = np.argmax(y_valid, axis=1)#Cambio del formato hot-encoder a enteros para comparar las predicciones del modelo, con argmax devuelve los índices de los valores máximos, ej encontrar la posición del valor 1 en cada vector one-hot, lo que corresponde a la clase correcta\n",
         "y_true_classes = y_valid\n",
         "\n",
         "print(classification_report(y_true_classes, y_pred_classes, target_names=sentiments.values()))"
